chore: fixed whitespace bug in email input, diabled text area resize

--- a/styles/contactForm/contactForm.module.css
+++ b/styles/contactForm/contactForm.module.css
@@ -38,6 +38,7 @@
   font-weight: 400;
   padding: 0.2rem;
   width: 40rem;
+  resize: none;
 }
 
 .textArea:focus {
